@@ -120,7 +120,7 @@ CREATE TABLE "WEBCAL_USER_PREF"
 (
    "CAL_LOGIN"	VARCHAR(25) CHARACTER SET WIN1252 NOT NULL,
    "CAL_SETTING"	VARCHAR(25) CHARACTER SET WIN1252 NOT NULL,
-   "CAL_VALUE"	VARCHAR(50) CHARACTER SET WIN1252
+   "CAL_VALUE"	VARCHAR(100) CHARACTER SET WIN1252
 );
 
 /* Table: WEBCAL_GROUP, Owner: SYSDBA */
@@ -164,7 +164,7 @@ CREATE TABLE "WEBCAL_VIEW_USER"
 CREATE TABLE "WEBCAL_CONFIG" 
 (
    "CAL_SETTING"	VARCHAR(50) CHARACTER SET WIN1252 NOT NULL,
-   "CAL_VALUE"	VARCHAR(50) CHARACTER SET WIN1252
+   "CAL_VALUE"	VARCHAR(100) CHARACTER SET WIN1252
 );
 
 
